Projected completed The completed project allows users to create quizzes about specific book chapters using the chatgpt api Users can use the create quiz functionality with or without an account If users create an account they will be able to view the quizzes they have taken along with relevant information Such as their score,book title, chapter chosen, date taken, quiz questions, correct answers, and their answers.

--- a/static/CSS/profile.css
+++ b/static/CSS/profile.css
@@ -63,3 +63,21 @@ body {
     margin: 0 auto;
 
     }
+
+    #pagination{
+        display: flex;
+        flex-direction: row;
+        max-width: 800px;
+        margin: 20px auto;
+
+    }
+    #nextButton{
+        margin-left: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+    
+    }
+    #prevButton{
+        margin-right: auto; 
+
+    }
